infrastructure/k8s/nautilus/serving/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smirvaki-llama-serving
  namespace: cse239fall2025
  labels:
    app: smirvaki-llama-serving
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smirvaki-llama-serving
  template:
    metadata:
      labels:
        app: smirvaki-llama-serving
    spec:
      containers:
        - name: api
          image: docker.io/esmaeilmirvakili/llama-serving:latest
          imagePullPolicy: Always
          command: null
          ports:
            - containerPort: 8001
              name: api
          volumeMounts:
            - name: model-storage
              mountPath: /models
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "4"
              memory: "32Gi"
        - name: nginx
          image: nginx:1.25
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: nginx
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
      volumes:
        - name: model-storage
          persistentVolumeClaim:
            claimName: smirvaki-llama-model-pvc
        - name: nginx-config
          configMap:
            name: smirvaki-llama-nginx
